src/test/ui/codemap_tests/issue-11715.nll.stderr
error: compilation successful
  --> $DIR/issue-11715.rs:97:1
   |
LL | / fn main() { #![rustc_error] // rust-lang/rust#49855
LL | |     let mut x = "foo";
LL | |     let y = &mut x;
LL | |     let z = &mut x; //~ ERROR cannot borrow
LL | | }
   | |_^

error: aborting due to previous error

